--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "clean": "rm -rf .build/dist"
   },
   "dependencies": {
+    "axios": "^0.11.0",
     "babel-core": "^6.23.1",
     "babel-loader": "^6.3.2",
     "babel-polyfill": "^6.23.0",
@@ -29,6 +30,7 @@
     "react-router": "^3.0.2",
     "react-router-redux": "^4.0.4",
     "redux": "^3.6.0",
+    "redux-thunk": "^2.2.0",
     "semantic-ui-react": "^0.66.0",
     "serve-favicon": "^2.0.1",
     "strong-error-handler": "^1.0.1"
