--- a/server/model-config.json
+++ b/server/model-config.json
@@ -33,10 +33,7 @@
     "public": false
   },
   "Message": {
-    "dataSource": null
-  },
-  "Car": {
-    "dataSource": "db",
+    "dataSource": "mongodb",
     "public": true
   }
 }
