--- a/server/model-config.json
+++ b/server/model-config.json
@@ -44,5 +44,9 @@
   "commune": {
     "dataSource": "mongodb",
     "public": true
+  },
+  "pyramide": {
+    "dataSource": "mongodb",
+    "public": true
   }
 }
